--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Swiggy Clone </h2>
                                             <p>The Swiggy Clone project is a web application that I have developed as part of my learning journey in HTML, CSS, JavaScript, and Bootstrap. The primary objective of this project is to create a fully functional food delivery platform with a focus on responsive design, ensuring it works seamlessly across various devices and screen sizes.</p>
-                                            <br><a class="text-gradient mt-5" href="">Click to Visit</a>
+                                            <br><a class="text-gradient mt-5" href="https://joyal-74.github.io/swiggy-home/" target="_blank">Click to Visit</a>
                                         </div>
                                         <img class="img-fluid" src="assets/swiggy.webp" alt="..." style="max-width: 300px; max-height: 400px;">
                                     </div>
@@ -64,7 +64,7 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Tor Project Clone</h2>
                                             <p>The Tor Project is a public website that I have chosen to develop as part of my learning process in HTML, CSS, and Bootstrap. The main focus of this project is to create a fully responsive website, ensuring that it adapts seamlessly to different screen sizes and devices.  This approach enhances the usability and accessibility of the site across a wide range of devices.</p>
-                                            <br><a class="text-gradient mt-5" href="">Click to Visit</a>
+                                            <br><a class="text-gradient mt-5" href="https://joyal-74.github.io/tor-responsive/" target="_blank">Click to Visit</a>
                                         </div>
                                         <img class="img-fluid" src="assets/tor.webp" alt="..." style="max-width: 300px; max-height: 400px;">
                                     </div>
@@ -77,7 +77,7 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Starbucks Clone </h2>
                                             <p>The Starbucks Clone project is a web application that I have developed as part of my learning process in HTML, CSS, JavaScript, and Bootstrap. The main goal of this project is to create an online store with a focus on providing a fully responsive user experience. This project helps me enhance my skills in building dynamic, interactive websites while delivering a smooth and engaging user experience.!</p>
-                                            <br><a class="text-gradient mt-5" href="">Click to Visit</a>
+                                            <br><a class="text-gradient mt-5" href="https://joyal-74.github.io/starbucks/" target="_blank">Click to Visit</a>
                                         </div>
                                         <img class="img-fluid" src="assets/starbucks.webp" alt="..." style="max-width: 300px; max-height: 400px;">
                                     </div>
@@ -90,7 +90,7 @@
                                         <div class="p-5">
                                             <h2 class="fw-bolder">Spotify Clone </h2>
                                             <p>The Spotify Clone project is a web application that I have developed as part of my learning process. The main goal of this project is to create an online music platform with a focus on providing a fully responsive user experience. This project helps me enhance my skills in building dynamic, interactive websites while delivering a smooth and engaging user experience.!</p>
-                                            <br><a class="text-gradient mt-5" href="">Click to Visit</a>
+                                            <br><a class="text-gradient mt-5" href="https://joyal-74.github.io/spotify/" target="_blank">Click to Visit</a>
                                         </div>
                                         <img class="img-fluid" src="assets/spotify.webp" alt="..." style="max-width: 300px; max-height: 400px;">
                                     </div>
